infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: sample-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
